updating build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,12 @@ dependencies {
 	implementation group: 'commons-lang', name: 'commons-lang', version: '2.6'
 	implementation group: 'com.thoughtworks.xstream', name: 'xstream', version: '1.4.2'
 	implementation group: 'org.webjars', name: 'jquery', version: '3.5.1'
+	implementation group: 'net.sf.ehcache', name: 'ehcache', version: '2.9.1'
+	implementation group: 'redis.clients', name: 'jedis', version: '2.9.0'
+	implementation group: 'org.jsoup', name: 'jsoup', version: '1.14.3'
+
+
+
 
 	compileOnly "org.springframework.boot:spring-boot-starter-security"
 	compileOnly 'org.projectlombok:lombok'
